prqlc/prql-compiler/tests/integration/snapshots/integration__queries__compile__aggregation.snap
---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# mssql:skip\n# mysql:skip\n# clickhouse:skip\n# glaredb:skip (the string_agg function is not supported)\nfrom tracks\nfilter genre_id == 100\nderive empty_name = name == ''\naggregate {sum track_id, concat_array name, all empty_name, any empty_name}\n"
input_file: prqlc/prql-compiler/tests/integration/queries/aggregation.prql
---
SELECT
  COALESCE(SUM(track_id), 0),
  COALESCE(STRING_AGG(name, ''), ''),
  COALESCE(BOOL_AND(name = ''), TRUE),
  COALESCE(BOOL_OR(name = ''), FALSE)
FROM
  tracks
WHERE
  genre_id = 100

